remove company parameter
